--- a/Information/TermsAndConditions.xaml
+++ b/Information/TermsAndConditions.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Cloudsdale.Information.Info"
+    x:Class="Cloudsdale.Information.TermsAndConditions"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -9,18 +9,13 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait" Orientation="Portrait"
+    SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot">
-        <Grid.Background>
-            <RadialGradientBrush>
-                <GradientStop Color="#FF3A9AFB" Offset="0" />
-                <GradientStop Color="#FF2A85DB" Offset="1" />
-            </RadialGradientBrush>
-        </Grid.Background>
+    <Grid x:Name="LayoutRoot" Background="#FFF0F0F0">
+        <phone:WebBrowser Source="https://www.cloudsdale.org/terms-and-conditions?layout=mobile" Margin="12,0" />
     </Grid>
 
 </phone:PhoneApplicationPage>
