--- a/App.xaml
+++ b/App.xaml
@@ -15,7 +15,8 @@
             <Controls:StatusColorConverter x:Key="SCC" />
             <Managers:ArrayHasAnyVis x:Key="AHAV" />
             <Managers:PromoOrDemo x:Key="POD" />
-            
+            <Managers:JUri x:Key="JURI" />
+
             <Style TargetType="Controls:LinkDetectingTextBlock" x:Key="ChatStyle">
                 <Setter Property="FontFamily" Value="Verdana" />
                 <Setter Property="FontSize" Value="10" />
