--- a/Account/Register.xaml
+++ b/Account/Register.xaml
@@ -32,8 +32,8 @@
             <TextBox Name="Username" />
             <CheckBox Foreground="#3a3a3a" Name="Over13"
                       >I am over the age of 13</CheckBox>
-            <Button Foreground="#3a3a3a" Click="CreateAccountClick" 
-                    BorderBrush="#3a3a3a" Name="CreateButton">Create Account</Button>
+            <Button Click="CreateAccountClick" 
+                    Name="CreateButton">Create Account</Button>
         </StackPanel>
     </Grid>
 
