--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -381,8 +381,7 @@
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" ForegroundColor="White"
-                              BackgroundColor="{Binding Source={StaticResource PhoneChromeBrush}, Path=Color}">
+        <shell:ApplicationBar IsVisible="True" ForegroundColor="White">
             <shell:ApplicationBarIconButton Text="Send" IconUri="/Images/appbar.send.text.rest.png" Click="SendTextClick" />
             <shell:ApplicationBarIconButton Text="Info" IconUri="/Images/appbar.info.rest.png" Click="CloudInfoClick" />
             <shell:ApplicationBar.MenuItems>
