--- a/XamlResources.xaml
+++ b/XamlResources.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:Managers="clr-namespace:Cloudsdale.Managers"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:my="clr-namespace:Cloudsdale.Controls">
+    <Managers:Translucent x:Key="Translucent" />
     <LinearGradientBrush x:Key="PortraitBackground" StartPoint="0,0" EndPoint="0,1">
         <GradientStop Color="{Binding Source={StaticResource PhoneChromeBrush}, Path=Color}" Offset="0.1425" /> <!--#FF1A91DB-->
         <GradientStop Color="#FFF0F0F0" Offset="0.1425" />
@@ -37,7 +38,7 @@
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentContainer">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="#FF1A91DB"/>
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneChromeBrush}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="ButtonBackground">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="#FFFFFFFF"/>
@@ -53,10 +54,10 @@
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="#FFFFFFFF"/>
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="ButtonBackground">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="#FFAAD1FF"/>
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{Binding Source={StaticResource PhoneChromeBrush}, Converter={StaticResource Translucent}}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="ButtonBackground">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="#FFAAD1FF"/>
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{Binding Source={StaticResource PhoneChromeBrush}, Converter={StaticResource Translucent}}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
