--- a/Home.xaml
+++ b/Home.xaml
@@ -119,8 +119,12 @@
                             <toolkit:ListPicker Name="FontPicker" SelectionChanged="FontPickerSelectionChanged" />
                             <TextBlock>Color Scheme</TextBlock>
                             <toolkit:ListPicker Name="ThemePicker" SelectionChanged="ThemePickerSelectionChanged">
-                                <toolkit:ListPickerItem>Bright</toolkit:ListPickerItem>
-                                <toolkit:ListPickerItem>Dark</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Blue</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Dark Blue</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Red</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Green</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Black</toolkit:ListPickerItem>
+                                <toolkit:ListPickerItem>Mango</toolkit:ListPickerItem>
                             </toolkit:ListPicker>
                             <TextBlock>Status</TextBlock>
                             <toolkit:ListPicker Name="StatusBox" SelectionChanged="StatusSelectionChanged">
