--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -38,7 +38,7 @@
             <Image Source="/Images/cloudsdale-thin-bright-logo.png" />
         </Grid>
 
-        <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Visible">
+        <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Collapsed">
             <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
                      Margin="40,120,0,0" />
             <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,210,0,0" />
