--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -157,7 +157,7 @@
     </phone:PhoneApplicationPage.Resources>
 
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackgroundChat}" Margin="0,0,0,0">
-        <MediaElement Name="mediaPlayer" />
+        <MediaElement Name="mediaPlayer" MediaOpened="HarlemShakeReady" />
         <controls:Pivot Title="&lt;Cloud name goes here&gt;" x:Name="cloudPivot" Margin="0,10,0,0">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
