--- a/App.xaml
+++ b/App.xaml
@@ -17,6 +17,7 @@
             <Managers:ArrayHasAnyVis x:Key="AHAV" />
             <Managers:PromoOrDemo x:Key="POD" />
             <Managers:JUri x:Key="JURI" />
+            <Managers:StringTrim x:Key="Trim" />
 
             <Style TargetType="Controls:LinkDetectingTextBlock" x:Key="ChatStyle">
                 <Setter Property="FontFamily" Value="Verdana" />
