--- a/Account/SetEmail.xaml
+++ b/Account/SetEmail.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Cloudsdale.Account.SetPassword"
+    x:Class="Cloudsdale.Account.SetEmail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -21,11 +21,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Foreground="White" FontSize="64" Margin="15" 
-                   HorizontalAlignment="Center">Pick a password</TextBlock>
+        <TextBlock Foreground="White" FontSize="64" Margin="0,15" 
+                   HorizontalAlignment="Center">Enter your email</TextBlock>
 
         <StackPanel Grid.Row="1">
-            <PasswordBox Height="75" VerticalAlignment="Top" Margin="0,175,0,0" Name="Password" />
+            <TextBox Height="75" VerticalAlignment="Top" Margin="0,175,0,0" Name="Email" InputScope="Email" />
             <Button Margin="50" Click="DoneClick">Done</Button>
         </StackPanel>
     </Grid>
