--- a/Home.xaml
+++ b/Home.xaml
@@ -61,7 +61,7 @@
         </ResourceDictionary>
     </phone:PhoneApplicationPage.Resources>
 
-    <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}" Margin="0,0,0,0">
+    <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackgroundChat}" Margin="0,0,0,0">
         <controls:Pivot Title="Cloudsdale" Name="pivotView" Margin="0,10,0,0" Foreground="{StaticResource PhoneChromeBrush}">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
